--- a/index.html
+++ b/index.html
@@ -32,7 +32,10 @@
                 <button id="closeForm">Close</button>
     </div> 
 
-    <p><div id="allBooks">
+    <div id="allBooks">
+    <p>
+        <br>
+        <br>
         <br>
         <br>
         <br>
@@ -43,5 +46,19 @@
         &nbsp; <button id="readBooks">Mark Read</button>
         &nbsp; <button id="unreadBooks">Mark Unread</button>
     </div></p>
+
+    <div id="testTable">
+        <table id="tt">
+            <tr>
+                <th>Title</th>
+                <th>Author</th>
+                <th>Genre</th>
+                <th><input type="checkbox" id="_checkbox"></th>
+            </tr>
+            <tbody>
+                
+            </tbody>
+        </table>
+    </div>
 </body>
 </html>
