cleared old stuff, tables only future now

--- a/index.html
+++ b/index.html
@@ -39,26 +39,24 @@
         <br>
         <br>
         <br>
-        <br>Select All <input type="checkbox" id="selectAll">
         <br><span id="viewer"></span>
         <br>
+        <div id="testTable">
+            <table id="tt">
+                <tr>
+                    <th>Title</th>
+                    <th>Author</th>
+                    <th>Genre</th>
+                    <th><input type="checkbox" id="selectAll"></th>
+                </tr>
+                <tbody>
+                    
+                </tbody>
+            </table>
+        </div>
         <br><button id="deleteBooks">Remove</button>
         &nbsp; <button id="readBooks">Mark Read</button>
         &nbsp; <button id="unreadBooks">Mark Unread</button>
     </div></p>
-
-    <div id="testTable">
-        <table id="tt">
-            <tr>
-                <th>Title</th>
-                <th>Author</th>
-                <th>Genre</th>
-                <th><input type="checkbox" id="_checkbox"></th>
-            </tr>
-            <tbody>
-                
-            </tbody>
-        </table>
-    </div>
 </body>
 </html>
