--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
         </ul>
     </nav>
 
-    <p id="standard"> Welcome to the library :></P>
+    <div id="standard">
+        <P>Welcome to the library :></P>
+    </div>
 
     <div id="bookForm" style="display: none">
         <p><input type="form" id="addTitle" placeholder="Title">
@@ -33,30 +35,28 @@
     </div> 
 
     <div id="allBooks">
-    <p>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br><span id="viewer"></span>
-        <br>
-        <div id="testTable">
-            <table id="tt">
-                <tr>
-                    <th>Title</th>
-                    <th>Author</th>
-                    <th>Genre</th>
-                    <th><input type="checkbox" id="selectAll"></th>
-                </tr>
-                <tbody>
+    <div id="viewer">
+        <P>The library is empty!!</P>
+    </div>
+        
+    <div id="testTable">
+        <P>
+        <table id="tt">
+            <tr>
+                <th>Title</th>
+                <th>Author</th>
+                <th>Genre</th>
+                <th><input type="checkbox" id="selectAll"></th>
+            </tr>
+            <tbody>
                     
-                </tbody>
+            </tbody>
             </table>
-        </div>
         <br><button id="deleteBooks">Remove</button>
         &nbsp; <button id="readBooks">Mark Read</button>
         &nbsp; <button id="unreadBooks">Mark Unread</button>
-    </div></p>
+    </P>
+    </div>
+    </div>
 </body>
 </html>
